--- a/index.Rmd
+++ b/index.Rmd
@@ -32,13 +32,13 @@ Preparing the dashboard based on the instructions given at @magallanes_reyes_dat
 ### Categorical Bar Plot
 
 ```{r}
-base_plot <- ggplot(data = locale_summary, aes(x = LocaleType, y = School_Count))
+base_plot <- ggplot(data = locale_summary, aes(x = reorder(LocaleType, -School_Count), y = School_Count))
 my_barplot <- base_plot +
   geom_bar(stat = 'identity', fill = "#2C7BB6", color = "black") +
   labs(
-    title = "Schools by Locale Type",
-    subtitle = "School Locations in the State of Washington (2019)",
-    x = "Locale Type",
+    title = "Concentration of Schools by Locale Type",
+    subtitle = "Subset: Urban and Rural Schools in Washington (2019)",
+    x = NULL,
     y = "Number of Schools",
     caption = "Data Source: US Department of Education"
   ) +
@@ -46,13 +46,13 @@ my_barplot <- base_plot +
   theme(
     plot.title = element_text(face = "bold", size = 16, color = "#1D3557"),
     plot.subtitle = element_text(size = 12, color = "#457B9D"),
-    axis.title.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12)
+    axis.title.y = element_text(size = 12),
+    axis.text.x = element_text(angle = 45, hjust = 1)
   )
 
 my_barplot
 
-saveRDS(my_barplot, file = "barplot.rds")
+saveRDS(my_barplot, file = "barplot_updated.rds")
 ```
 
 
